# tgc2rss

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  kafka.properties  pyproject.toml
src/: app.py  config.py
src/domain/: adapters.py
src/domain/models/: __init__.py  rss.py  telegram.py
src/domain/repositories/: __init__.py  telegram.py
src/domain/services/: rss_parser.py
src/infrastructure/: adapters.py
src/infrastructure/mq/: consumers.py  handlers.py  producers.py
src/infrastructure/repositories/: telegram.py
tests/test_domain/test_models/: test_xml_feed.py
