[tool.poetry]
name = "tgc2rss"
version = "0.1.0"
description = "A small service to make RSS feed from Telegram channel"
authors = ["Vitaliy Zaitsev <dev.zaitsev@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.9.2"
pydantic-settings = "^2.6.0"
loguru = "^0.7.2"
telethon = "^1.37.0"
mistletoe = "^1.4.0"
bs4 = "^0.0.2"
aiokafka = "^0.11.0"

[tool.poetry.group.dev.dependencies]
ruff = "*"
pre-commit = "*"
pytest = "^8.3.3"



[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py312"
exclude = ["tests"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
line-ending = "auto"

[tool.ruff.lint]
select = ["E", "F", "B", "I", "D", "UP"]
extend-fixable = ["I"]
ignore = ["D104", "D100", "D105", "B008", "D107", "D415", "D400"]

[tool.pytest.ini_options]
pythonpath = [
  ".", "src",
]
